--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,6 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.highfive</groupId>
-	<artifactId>controller</artifactId>
 	<name>highfive</name>
 	<packaging>war</packaging>
 	<version>1.0.0-BUILD-SNAPSHOT</version>
@@ -197,4 +196,5 @@
             </plugin>
         </plugins>
     </build>
+    <artifactId>highfive</artifactId>
 </project>
